Fixed spacing

--- a/packages/changed-elements-react/src/NamedVersionSelector/NamedVersionSelector.scss
+++ b/packages/changed-elements-react/src/NamedVersionSelector/NamedVersionSelector.scss
@@ -88,7 +88,7 @@
     ._cer_v1_named-version-list-header {
       grid-column: 1 / 4;
       padding-block: var(--iui-size-m);
-
+      padding-inline: var(--iui-size-xs);
       display: flex;
       gap: var(--iui-size-s);
       justify-content: space-between;
